--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^16.12.0"
   },
   "dependencies": {
-    "deck.gl": "^8.0.1",
+    "@deck.gl/layers": "^8.0.1",
+    "@deck.gl/react": "^8.0.1",
     "immutable": "^4.0.0-rc.12",
     "react-map-gl": "^5.1.4",
     "react-virtualized-auto-sizer": "^1.0.2"
