--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "repository": "https://github.com/BH-M87/cool-map-gl.git/cool-map-gl",
   "scripts": {
+    "start": "npm run dev",
     "dev": "father doc dev",
     "build": "father build"
   },
@@ -19,21 +20,27 @@
     "prop-types": "^15.x"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^6.6.0",
-    "eslint-config-cool": "^0.3.0",
-    "father": "^2.16.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-cool": "^0.3.3",
+    "father": "^2.29.3",
     "immutable": "^4.0.0-rc.12",
-    "prettier-eslint": "^9.0.1",
+    "prettier-eslint": "^10.1.0",
     "prettier-eslint-cli": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0"
   },
   "dependencies": {
-    "@deck.gl/layers": "^8.0.1",
-    "@deck.gl/react": "^8.0.1",
+    "@deck.gl/core": "^8.1.7",
+    "@deck.gl/layers": "^8.1.7",
+    "@deck.gl/mesh-layers": "^8.1.7",
+    "@deck.gl/react": "^8.1.7",
+    "@nebula.gl/layers": "^0.18.1",
+    "@nebula.gl/overlays": "^0.18.4",
+    "@turf/difference": "6.0.1",
     "immutable": "^4.0.0-rc.12",
-    "react-map-gl": "^5.1.4",
+    "nebula.gl": "^0.18.1",
+    "react-map-gl": "^5.2.5",
     "react-virtualized-auto-sizer": "^1.0.2"
   }
 }
