--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "father build"
   },
   "peerDependencies": {
-    "react": "17.x",
+    "react": ">=16.0.0",
     "prop-types": "^15.x"
   },
   "devDependencies": {
