--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "react": "^16.12.0"
   },
   "dependencies": {
-    "@deck.gl/aggregation-layers": "^8.3.9",
-    "@deck.gl/core": "^8.3.9",
-    "@deck.gl/geo-layers": "^8.4.17",
-    "@deck.gl/layers": "^8.3.9",
-    "@deck.gl/mesh-layers": "^8.3.9",
-    "@deck.gl/react": "^8.3.9",
+    "@deck.gl/aggregation-layers": "^8.4.19",
+    "@deck.gl/core": "^8.4.19",
+    "@deck.gl/extensions": "^8.4.19",
+    "@deck.gl/geo-layers": "^8.4.19",
+    "@deck.gl/layers": "^8.4.19",
+    "@deck.gl/mesh-layers": "^8.4.19",
+    "@deck.gl/react": "^8.4.19",
     "@nebula.gl/layers": "^0.22.3",
     "@nebula.gl/overlays": "^0.22.3",
     "@turf/difference": "6.0.1",
